// Copyright(c) 2017-2018 Zededa, Inc.
// All rights reserved.

syntax = "proto3";

option go_package  = "github.com/lf-edge/eve/api/go/config";
option java_package = "com.zededa.cloud.uservice.proto";

import "netcmn.proto";

message MapServer {
        string NameOrIp   = 1;
        string Credential = 2;
}

message DeviceLispDetails {
        repeated MapServer LispMapServers = 1;
        uint32 LispInstance = 2;
        string EID = 4;
        uint32 EIDHashLen = 5;
        repeated ZedServer ZedServers = 6; // Deprecate in favor of dns
        // deprecated = 6;
        bytes EidAllocationPrefix = 8;
        uint32 EidAllocationPrefixLen = 9;
        string ClientAddr = 10;
        repeated ZnetStaticDNSEntry dns = 11; // Add code in handlelookupparam.go
        bool Experimental = 20; // true: lispers.net dataplane. Default: go dataplane
}
